# scholarly

./: .flake8  .gitignore  .landscape.yaml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  MANIFEST  Pipfile  README.md  README.rst  createCollaborationMap.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  scholar.py  scholarly.py  setup.cfg  setup.py  test.py  test_module.py
.github/: .codecov.yml  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md  pull_request_template.md
.github/workflows/: codeql-analysis.yml  codespell.yml  (+4 more)
author/: author.py
colaborationMap/: .index.html.swp  coauthorship.json  index.html  index1.html
collaborationMap/: coauthorship.json  index.html
docs/: Author.rst  AuthorParser.rst  DataTypes.rst  ProxyGenerator.rst  Publication.rst  PublicationParser.rst  codebase_improvements.md  compile.bat  conf.py  index.rst  proxy.rst  quickstart.rst  scholarly.author.rst  scholarly.rst
publication/: publication.py
pyScholar/: __init__.py  pyScholar.py
scholar/: __init__.py  scholar.py
scholarly/: Author.py  Publication.py  README.md  Scholarly.py  __init__.py  _navigator.py  _proxy_generator.py  _scholarly.py  _search_scholar_iterator.py  author.py  author_parser.py  confs.py  data_types.py  publication.py  publication_parser.py  scholarly.py  test.py  urls.json
scripts/: setup-chrome-ubuntu-latest.sh  setup_tor.sh
testdata/: test_bibtex_result.txt
(+68 files in other folders)
